# polyglot-parser

./: CMakeLists.txt  README.md
adapters/: adapters.h  js_adapter.c  python_adapter.c  ruby_adapter.c
cmake/: polygot_parserConfig.cmake.in
consumer_app/: CMakeLists.txt  README.md  main.c
examples/: error.txt
exporter/: mc_export.c
graph/: graph.c  graph.h
ir/: ir.c  ir.h
src/: main.c
tests/: CMakeLists.txt
tests/integration/: test_cli.c
tests/unit/: test_adapters.c  test_exporter.c  test_graph.c  test_ir.c  test_parser.c
